--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: HopScotch Kid
 Template: hopscotch-wp
-Theme URI: http://designdrive.co/hopscotch/
+Theme URI: http://dys.ph/hopscotch/
 Author: Brian Dys Sahagun
 Author URI: http://briansahagun.com
-Version: 3.0
+Version: 3.0.1
 License: GNU General Public License
 License URI: http://www.gnu.org/licenses/gpl.html
 Tags: accessibility-ready, responsive-layout
